tests/lime/fail/tokens/label_rest/byte_32.wsa
jmp .l  .l : push 32
